@@ -16,11 +16,12 @@
 $Id$
 """
 __docformat__ = "reStructuredText"
+
+import doctest
 import unittest
 
 import zope.interface
 import zope.interface.verify
-from zope.testing import doctest
 from zope.component.interfaces import ISite, IPossibleSite
 
 from zope.site import folder
