@@ -5,8 +5,9 @@ CHANGES
 3.9.1 (unreleased)
 ------------------
 
-Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest.
+Removed use of 'zope.testing.doctest' in favor of stdlib's 'doctest.
 
+Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest.
 
 3.9.0 (2009-12-29)
 ------------------
